# analista_licitacoes

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  response.json  streamlit_app.py
src/analista_licitacoes/: crew.py  main.py  teste.py
src/analista_licitacoes/config/: agents.yaml  tasks.yaml
src/analista_licitacoes/tools/: leitor_documentos_tool.py
src/analista_licitacoes/utils/: litellm_wrapper.py  output_writer.py
tests/: test_analisat.http
