[project]
name = "analista_licitacoes"
version = "0.1.0"
description = "analista_licitacoes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
analista_licitacoes = "analista_licitacoes.main:run"
run_crew = "analista_licitacoes.main:run"
train = "analista_licitacoes.main:train"
replay = "analista_licitacoes.main:replay"
test = "analista_licitacoes.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
